change design structure

--- a/form-three.html
+++ b/form-three.html
@@ -4,25 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Form Three</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
-<style>
-  .result td, .result th {
-    border-top: 0px !important;
-}
-</style>
 <body>
   <!--Navbar -->
     <section>
         <nav class="navbar navbar-expand-lg navbar-light bg_color shadow">
-            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,8 +25,7 @@
           </nav>
     </section>
 <!-- Page Content -->
-
-    <section class="bg_body">
+    <section class="bg_body pt-3 pb-5 px-5">
             <div class="container-fluid mb-3"> 
               <div class="row bg_form" >
                 <div class="col-md-12" >
@@ -79,7 +71,7 @@
               </div>
             </div>
             <!--end of form-->
-            <div class="bg_form p-2">
+            <div class="bg_form p-3">
                 <h4 class="text-center mt-2 mb-3">Biochemist Analyzer Report</h4>
                 <table class="table result">
                   <thead class="thead-light">
@@ -129,8 +121,8 @@
                 </table>
                 <!--end of table-->
             </div>
-            <!--second tabke-->
-            <div class="bg_form p-2">
+            <!--second table-->
+            <div class="bg_form p-3">
                 <h4 class="text-center mb-3">Blood Examination Report</h4>
                 <table class="table result">
                   <thead class="thead-light">
@@ -201,14 +193,5 @@
         </div>
       </div>
     </section>
-    <!-- <script>
-      function w3_open() {
-        document.getElementById("mySidebar").style.display = "block";
-      }
-      
-      function w3_close() {
-        document.getElementById("mySidebar").style.display = "none";
-      }
-      </script> -->
 </body>
 </html>
