--- a/form-two.html
+++ b/form-two.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Form Two</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
   <!--Navbar -->
     <section>
         <nav class="navbar navbar-expand-lg navbar-light bg_color box-shadow">
-            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-            <button class="navbar-toggler" onclick="w3_open()" type="button" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" onclick="sidebar_open()" type="button" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -26,28 +25,27 @@
             </div>
           </nav>
     </section>
-<!-- Sidebar -->
-<div class="sidebar" style="display:none" id="mySidebar">
-  <button onclick="w3_close()" class="w3-bar-item w3-large btn btn-danger">Close &times;</button>
-  <ul class="list-group">
-    <li class="list-group-item text-uppercase">cbc</li>
-    <li class="list-group-item text-uppercase">rbs</li>
-    <li class="list-group-item">Chest X-Ray</li>
-    <li class="list-group-item">Ultrasound</li>
-    <li class="list-group-item text-uppercase">ecg</li>
-    <li class="list-group-item">CT Scan</li>
-  </ul>
-</div>
+    <!-- Sidebar -->
+    <div class="sidebar" id="mySidebar">
+      <button onclick="sidebar_close()" class="w3-bar-item w3-large btn btn-danger">Close &times;</button>
+      <ul class="list-group">
+        <li class="list-group-item text-uppercase">cbc</li>
+        <li class="list-group-item text-uppercase">rbs</li>
+        <li class="list-group-item">Chest X-Ray</li>
+        <li class="list-group-item">Ultrasound</li>
+        <li class="list-group-item text-uppercase">ecg</li>
+        <li class="list-group-item">CT Scan</li>
+      </ul>
+    </div>
 
 <!-- Page Content -->
-
     <section class="bg_body">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-2 for_sidebar">
-              <div class="for_ul" style="height: 100%;">
+        <div class="row px-3 py-3">
+          <div class="col-md-2 for_sidebar" >
+              <div class="for_ul">
                 <ul class="pt-3">
-                  <li class="text-uppercase">cbc</li>
+                  <li class="text-uppercase for_cbc">cbc</li>
                   <li class="text-uppercase">rbs</li>
                   <li>Chest X-Ray</li>
                   <li>Ultrasound</li>
@@ -55,55 +53,40 @@
                   <li>CT Scan</li>
                 </ul>
               </div>
-
           </div>
-          <div class="col-md-10">
-            <div class="container-fluid mb-3"> 
-              <div class="row bg_form" >
-                <div class="col-md-12" >
-                  <form class="table_th mt-3">
-                    <table class="table ">
-                      <thead>
-                        <tr>
-                          <td class="text-right">Patient name:</td>
-                          <th>
-                            <input type="text">
-                          </th>
-                          <td scope="col" class="text-right">Patient ID:</td>
-                          <th scope="col">
-                            <input type="text">
-                          </th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td scope="row" class="text-right">Patient Age:</td>
-                          <td>
-                            <input type="text">
-                          </td>
-                          <td class="text-right">Mobile number:</td>
-                          <td>
-                            <input type="text">
-                          </td>
-                        </tr>
-                        <tr>
-                          <td scope="row" class="text-right">Gender:</td>
-                          <td>
-                            <input type="text">
-                          </td>
-                          <td class="text-right">Consultant name:</td>
-                          <td>
-                            <input type="text">
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </form>
+          <div class="col-md-10 form_fields">
+            <div class="row bg_form mb-4 m-0" >
+              <div class="col-md-12 w-100">
+                <div class="form-fields-container">
+                  <ul class="form-fields p-0">
+                    <li>
+                      Patient ID: <input type="text">
+                    </li>
+                    <li>
+                      Mobile number: <input type="text">
+                    </li>
+                    <li>
+                      Consultant name: <input type="text">
+                    </li>
+                </ul>
+                </div>
+                <div class="form-fields-container">
+                  <ul class="form-fields p-0">
+                    <li>
+                      Patient name: <input type="text">
+                    </li>
+                    <li>
+                      Patient age: <input type="text">
+                    </li>
+                    <li>
+                      Gender: <input type="text">
+                    </li>
+                </ul>
                 </div>
               </div>
-            </div>
+            </div> 
             <!--end of form-->
-            <div class="bg_form p-2">
+            <div class="bg_form p-4">
               <textarea class="text_box w-100" name="" id="" cols="108" rows="11"></textarea>
               <div class="form-group mt-2">
                 <label class="comments">Comments:</label>
@@ -119,9 +102,9 @@
                 </div>
               </div>
             <div class="container my-5 pt-5">
-              <div class="row">
-                <div class="col-md-4">
-                  <div class="form-group">
+              <div class="row ">
+                <div class="col-md-4 col_edit">
+                  <div class="form-group for_select">
                     <label for="exampleFormControlSelect1">Report by</label>
                     <select class="form-control">
                       <option></option>
@@ -137,9 +120,9 @@
                     <button type="button" class="btn btn-light">Save and Print</button>
                   </div>
                 </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label for="exampleFormControlSelect1">Test</label>
+                <div class="col-md-4 col_modify">
+                  <div class="form-group float-right for_select">
+                    <label for="exampleFormControlSelect1">Checked by</label>
                     <select class="form-control" id="exampleFormControlSelect1">
                       <option></option>
                       <option></option>
@@ -157,20 +140,10 @@
               </div>
             </div>
             </div>
-
-
           </div>
         </div>
       </div>
     </section>
-    <script>
-      function w3_open() {
-        document.getElementById("mySidebar").style.display = "block";
-      }
-      
-      function w3_close() {
-        document.getElementById("mySidebar").style.display = "none";
-      }
-      </script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
