--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Form One</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
   <!--Navbar -->
     <section>
         <nav class="navbar navbar-expand-lg navbar-light bg_color box-shadow">
-            <button class="navbar-toggler" onclick="w3_open()" type="button" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" onclick="sidebar_open()" type="button" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <div>
                 <label>Search ID</label>
-                <div class="form-group has-search">
+                <div class="has-search">
                   <span class="fa fa-search form-control-feedback"></span>
                   <input type="text" class="form-control">
                 </div>
@@ -32,25 +32,25 @@
             </div>
           </nav>
     </section>
-<!-- Sidebar -->
-<div class="sidebar" id="mySidebar">
-  <button onclick="w3_close()" class="w3-bar-item w3-large btn btn-danger">Close &times;</button>
-  <ul class="list-group">
-    <li class="list-group-item text-uppercase">cbc</li>
-    <li class="list-group-item text-uppercase">rbs</li>
-    <li class="list-group-item">Chest X-Ray</li>
-    <li class="list-group-item">Ultrasound</li>
-    <li class="list-group-item text-uppercase">ecg</li>
-    <li class="list-group-item">CT Scan</li>
-  </ul>
-</div>
+    <!-- Sidebar -->
+    <div class="sidebar" id="mySidebar">
+      <button onclick="sidebar_close()" class="w3-bar-item w3-large btn btn-danger">Close &times;</button>
+      <ul class="list-group">
+        <li class="list-group-item text-uppercase">cbc</li>
+        <li class="list-group-item text-uppercase">rbs</li>
+        <li class="list-group-item">Chest X-Ray</li>
+        <li class="list-group-item">Ultrasound</li>
+        <li class="list-group-item text-uppercase">ecg</li>
+        <li class="list-group-item">CT Scan</li>
+      </ul>
+    </div>
 
 <!-- Page Content -->
     <section class="bg_body">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-2 for_sidebar mt-3">
-              <div style="height: 100%; width: 100%;" class="for_ul">
+        <div class="row px-3 py-3">
+          <div class="col-md-2 for_sidebar" >
+              <div class="for_ul">
                 <ul class="pt-3">
                   <li class="text-uppercase for_cbc">cbc</li>
                   <li class="text-uppercase">rbs</li>
@@ -61,30 +61,10 @@
                 </ul>
               </div>
           </div>
-          <div class="col-md-10" style="margin:0 auto; width: 100vw !important;">
-            
-            <style>
-              .form-fields li{
-                padding: 10px;
-              }
-            </style>
-
-            <div class="row bg_form m-1 my-4" >
-              <div class="col-md-12 w-100 border">
-                <!-- <div class="form-fields-container border" style="width: 50%;float: left;">
-                  <ul class="form-fields border p-0">
-                      <li>
-                        Patient name: <input type="text">
-                      </li>
-                      <li>
-                        Patient age: <input type="text">
-                      </li>
-                      <li>
-                        Gender: <input type="text">
-                      </li>
-                  </ul>
-                </div> -->
-                <div class="form-fields-container" style="width: 50%;float: right;">
+          <div class="col-md-10 form_fields">
+            <div class="row bg_form mb-4 m-0" >
+              <div class="col-md-12 w-100">
+                <div class="form-fields-container">
                   <ul class="form-fields p-0">
                     <li>
                       Patient ID: <input type="text">
@@ -97,7 +77,7 @@
                     </li>
                 </ul>
                 </div>
-                <div class="form-fields-container" style="width: 50%;float: right;">
+                <div class="form-fields-container">
                   <ul class="form-fields p-0">
                     <li>
                       Patient name: <input type="text">
@@ -113,7 +93,7 @@
               </div>
             </div> 
             <!--end of form-->
-            <div class="bg_form m-1 p-4">
+            <div class="bg_form p-4">
               <table class="table result border-bottom">
                 <thead class="thead-light">
                   <tr>
@@ -204,14 +184,6 @@
         </div>
       </div>
     </section>
-    <script>
-      function w3_open() {
-        document.getElementById("mySidebar").style.display = "block";
-      }
-      
-      function w3_close() {
-        document.getElementById("mySidebar").style.display = "none";
-      }
-      </script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
